# code-search-tool

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  render.yaml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  logging_config.py  main.py
backend/app/services/: embedder.py  explainer.py  indexer.py  parser.py  vector_store.py
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/repos/: page.tsx
frontend/src/components/: RepoSelector.tsx  ResultCard.tsx  ResultsList.tsx  SearchBar.tsx
frontend/src/lib/: api.ts  logger.ts
frontend/src/types/: search.ts
