[project]
name = "code-search-tool-backend"
version = "0.1.0"
description = "FastAPI backend for Code Search Tool"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "sentence-transformers>=5.2.3",
    "tree-sitter>=0.25.2",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-rust>=0.24.0",
    "tree-sitter-typescript>=0.23.2",
    "uvicorn>=0.41.0",
]
